# plot-maker

./: CMakeLists.txt  README.md
examples/: example.xml
gnuplot/: 2dplots_cicle.gp  2dplots_cicle.legend  scatter.gp  simpleHist.gp  twodhist.gp
gnuplot/number-to-diagram/: 2dhist.gp  README.md  hist.gp  hist_input.txt
rootplot/: README.md  TTree2Stack.C  TTree2StackOverlays.C  TTree2StackOverlays_axion_common.C  TTree2StackOverlays_run1axion_ma003.C  TTree2StackOverlays_run1axion_ma006.C
rootplot/inc/: bdt_var.h  gadget.h  load_mva_param.h
rootplot/src/: CMakeLists.txt  gadget.cxx  hive.cxx  load_mva_param.cxx
rootplot/utility/: ConfigureSamples.h  ConfigureVars.h  Gadget.h  Gadgets.h  PlotHelper.h
xml/: example.xml
